--- a/cv.tex
+++ b/cv.tex
@@ -93,25 +93,10 @@
 
 \Description{\MarginText{2019\\(expected)}\textbf{Ph.D, Informatics}
   \newline University of Edinburgh, School of Informatics
-  \newline\vspace{-1.8em}
-
+  \vspace{.6em}
+  
   \noindent %
-  \begin{itemize}
-    \setlength\itemsep{-.4em}
-    \item Applied Deep Learning to compilers.
-    % \item Introduced deep learning over program code.
-    \item Demonstrated three applications, each published in top-tier conferences:
-    % program generation (CGO’17), optimization heuristic construction (PACT’17), and compiler testing (ASPLOS’18).
-    \vspace{-.6em}
-    \begin{itemize}
-      \setlength\itemsep{-.4em}
-      \item program generation (CGO'17)
-      \item optimization heuristic construction (PACT'17)
-      \item compiler testing (ASPLOS'18)
-    \end{itemize}
-    \item Won two best paper awards.
-    \item All code and data published on GitHub: \url{https://chriscummins.cc/phd}.
-  \end{itemize}
+  Deep learning over programs. Developing machine learning methods for random program generation, compiler optimisations, and representative benchmarking. Applications for heterogeneous parallelism, compiler testing, and adaptive performance tuning. To date: 4 publications, 2 best papers, 7 invited talks, 5 posters, 4 conferences.
 }
 
 \Description{\MarginText{2015}\textbf{MSc by Research, Pervasive Parallelism}
@@ -119,28 +104,20 @@
   \newline University of Edinburgh, School of Informatics
   \newline Thesis: \textit{Autotuning Stencil Codes with Algorithmic
     Skeletons} (grade: 85\%)
-  \newline\vspace{-1.8em}
+  \vspace{.6em}
 
   \noindent %
-  \begin{itemize}
-    \setlength\itemsep{-.4em}
-    \item Novel adaptive tuning for heterogeneous parallel systems.
-    \item $3.79\times$ speedup of multi-GPU stencil programs using machine learning.
-  \end{itemize}
+  Runtime adaptive tuning for heterogeneous parallel systems, targeting a high level DSL for multi-GPU stencil programs. Machine learning over distributed training sets.
 }
 
 \Description{\MarginText{2014}\textbf{MEng Electronic Engineering \& Computer Science}
   \textit{(First Class Honours)}
   \newline Aston University, School of Engineering \& Applied Science
   \newline Thesis: \textit{Protein Isoelectric Point Database} (grade: 90\%)
-  \newline\vspace{-1.8em}
+  \vspace{.6em}
 
   \noindent %
-  \begin{itemize}
-    \setlength\itemsep{-.4em}
-    \item Created a search engine for molecular biochemistry research.
-    \item Released open source: \url{http://pip-db.org}. Published in bioinformatics journal.
-  \end{itemize}
+  Created a novel search engine for molecular biochemistry data. Integrated BLAST search tools, a publicly accessible API, and tooling to generate synthetic payloads from confidential datasets for whitebox systems testing. Released open source.
 }
 
 
@@ -152,62 +129,35 @@
 % Format: \Job{dates}{employer}{title}{description}
 % Format: \ShortJob{dates}{employer}{title}
 
-\Description{\MarginText{2018}\textbf{Google}
+\Description{\MarginText{2018}\textbf{Google}, Mountain View, California, USA
   \newline Software Engineer Intern
-  \newline\vspace{-1.8em}
+  \vspace{.6em}
 
   \noindent %
-  \begin{itemize}
-    \setlength\itemsep{-.4em}
-    \item Did a thing.
-    \item And another thing.
-    \item Final thing.
-  \end{itemize}
+  Created a representative benchmark of Google Protocol Buffer usage. Working in the Google Wide Profiling team to synthesize benchmarks for Google compute. The project involved company-wide workload characterization through to datacenter-scale low level performance analysis of profiles and hardware counters.
 }
 
-\Description{\MarginText{2016}\textbf{Codeplay Software}
-  \newline Software Engineer Intern, Eigen SYCL Interface
-  \newline\vspace{-1.8em}
+\Description{\MarginText{2016--2018}%
+	\textbf{Codeplay Software}, Edinburgh, UK %
+	\newline Software Engineer, Part Time
+  \vspace{.6em}
 
   \noindent %
-  \begin{itemize}
-    \setlength\itemsep{-.4em}
-    \item Developing OpenCL port of TensorFlow.
-    \item Implemented GPU memory management for Eigen.
-    \item Proposed and designed Python interface for VisionCpp as lead developer.
-    \item Extensive C++ meta-programming.
-  \end{itemize}
-  % \noindent %
-  % Developing OpenCL port of Tensorflow. Implemented GPU memory management for Eigen. Compile time scheduling and kernel fusion for expression trees on GPUs. Proposed and designed a Python interface for VisionCpp as lead developer. Extensive C++ meta-programming.%
+  Developing OpenCL port of Tensorflow. Implemented GPU memory management for Eigen. Compile time scheduling and kernel fusion for expression trees on GPUs. Proposed and designed a Python interface for VisionCpp as lead developer. Extensive C++ meta-programming. Integrated compiler fuzzers into continuous testing tooling.%
 }
 
-\Description{\MarginText{2012--2013}\textbf{Intel Corporation}
+\Description{\MarginText{2012--2013}\textbf{Intel Corporation}, London, UK
   \newline Open Source Developer Intern
-  \newline\vspace{-1.8em}
+  \vspace{.6em}
 
-  \noindent %
-  \begin{itemize}
-    \setlength\itemsep{-.4em}
-    \item Patched \texttt{ioctl} subsystem in Linux kernel.
-    \item Developed a novel SIMD register visualisation tool for Intel GPUs.
-    \item Contributed to GTK+ support for Wayland display server.
-    \item Fixed numerous bugs in GNOME desktop applications.
-  \end{itemize}
-  % Patched \texttt{ioctl} subsystem in Linux kernel. Developed a novel SIMD register visualisation tool for Intel GPU assembly programming. Implemented GTK+ support for Wayland display server. Fixed memory and usability bugs in GNOME desktop applications. Developed particle effects engine for a 3D rendering program. Rapid prototyping of Android applications. Numerous contributions to open source projects.%
+	\noindent
+  Patched \texttt{ioctl} subsystem in Linux kernel. Developed a novel SIMD register visualisation tool for Intel GPU assembly programming. Implemented GTK+ support for Wayland display server. Fixed memory and usability bugs in GNOME desktop applications. Developed particle effects engine for a 3D rendering program. Rapid prototyping of Android applications. Numerous contributions to open source projects.%
 }
 
 \Description{\MarginText{2010--2017}\textbf{Freelance Web Developer}
-  \newline\vspace{-1.8em}
-
-  \noindent %
-  \begin{itemize}
-    \setlength\itemsep{-.4em}
-    \item Full-stack development, and UI/UX design.
-    \item Clients included independent publishers, a computer science conference, musicians, and beauty parlour.
-  \end{itemize}
-  % Full-stack development for small businesses, including graphic design and branding.
-  % Front-end experience with JavaScript; back-end development using Clojure, Node.js, PHP, MySQL, PostgreSQL, and Jekyll.%
-
+	\newline %
+  Full-stack development for small businesses, including graphic design and branding. Clients included conferences, publishing houses, musicians, and a beauty parlour.%
+	%
   % Clients:
   %
   % CGO'18
@@ -217,6 +167,10 @@
   % Border Scripts
   % Greystones Press
 }
+
+%\Description{\MarginText{2008}\textbf{Rolls Royce Holdings plc}, Derby, UK
+%	\newline Work placement in the Design Methods \& Improvements team.%
+%}
 
 
 \newpage
@@ -230,49 +184,55 @@
 
 \Description{\MarginText{\textit{2018}}C.\ \textsc{Cummins}, P.\
   \textsc{Petoumenos}, A.\ \textsc{Murray}, H.\
-  \textsc{Leather}. \textbf{Compiler Fuzzing through Deep Learning}. ASPLOS'18 (XX\% acceptance rate), XX, XX.\@
-  \newline\vspace{-.8em}
-
+  \textsc{Leather}. \textbf{Compiler Fuzzing through Deep Learning}. ISSTA'18 (28\% acceptance rate), Amsterdam, Netherlands.\@
+  \newline\vspace{-1em}
+  
   \noindent %
-  Foo.%
+  Unsupervised machine learning to derive program generators for compiler fuzz testing. $3.03\times$ faster than a grammar based approach, requiring $100\times$ less code. Found and reported 67 bug reports in OpenCL compilers.
 }
 
+\vspace{-.4em}
 \Description{\MarginText{\textit{2017}}C.\ \textsc{Cummins}, P.\
   \textsc{Petoumenos}, Z.\ \textsc{Wang}, H.\
-  \textsc{Leather}. \textbf{End-to-end Deep Learning of Compiler Heuristics}. PACT'17 (23\% acceptance rate), Portland, Oregon.\@
-  \newline\vspace{-.8em}
+  \textsc{Leather}. \textbf{End-to-end Deep Learning of Compiler Heuristics}. Best Paper PACT'17 (23\% acceptance rate), Portland, Oregon.\@
+  \newline\vspace{-1em}
 
   \noindent %
-  Learning optimization heuristics directly from raw source code, without the need for feature extraction. 12\% and 14\% performance improvements over state-of-the art, and greatly reduced development costs. % Can transfer knowledge gained from one optimization task to another, even if the learned tasks are dissimilar.%
+  Learning optimization heuristics directly from raw source code, without the need for feature extraction. 12\% and 14\% performance improvements over state-of-the art, with greatly reduced development costs and the ability to transfer learning across heuristics.% Can transfer knowledge gained from one optimization task to another, even if the learned tasks are dissimilar.%
 }
 
+\vspace{-.4em}
 \Description{\MarginText{2017}C.\ \textsc{Cummins}, P.\
   \textsc{Petoumenos}, Z.\ \textsc{Wang}, H.\
   \textsc{Leather}. \textbf{Synthesizing Benchmarks for Predictive Modeling}. Best Paper CGO'17 (22\% acceptance rate), Austin, Texas.\@
-  \newline\vspace{-.8em}
+  \newline\vspace{-1em}
 
   \noindent %
   Deep learning over massive codebases from GitHub to generate benchmark programs. Automatically synthesizes OpenCL kernels which are indistinguishable from hand-written code, and improves state-of-the-art predictive model performance by $4.30\times$.%
 }
+\vspace{-1.8em}
 
 \Description{\MarginText{2016}C.\ \textsc{Cummins}, P.\
   \textsc{Petoumenos}, M.\ \textsc{Steuwer}, H.\
   \textsc{Leather}. \textbf{Towards Collaborative Performance Tuning
     of Algorithmic Skeletons}. HLPGPU'16, HiPEAC, Prague.\@
-  \newline\vspace{-.8em}
+  \newline\vspace{-1em}
 
   \noindent %
   A distributed framework for dynamic prediction of optimisation parameters using machine learning. Automatically exceeds human experts by $1.22\times$.%
 }
+\vspace{-.4em}
 
 \Description{\MarginText{2016}C.\ \textsc{Cummins}, P.\
   \textsc{Petoumenos}, M.\ \textsc{Steuwer}, H.\
   \textsc{Leather}. \textbf{Autotuning OpenCL Workgroup Size for
-    Stencil Patterns}. ADAPT'16, HiPEAC, Prague.\@ \newline\vspace{-.8em}
+    Stencil Patterns}. ADAPT'16, HiPEAC, Prague.\@ %
+  \newline\vspace{-1em}
 
   \noindent %
   Three methodologies to autotune stencil patterns using machine learning. Speedups of $3.79\times$ over the best possible static size, 94\% of the maximum performance.%
 }
+\vspace{-.4em}
 
 \Description{%
   % Year:
@@ -289,7 +249,7 @@
       The Protein Isoelectric Point Database}}.
   % Appears in:
   Bioinformatics, 31(2), 295-296. Chicago. %
-  \newline\vspace{-.8em}
+  \newline\vspace{-1em}
 
   % Blurb:
   \noindent %
@@ -303,92 +263,96 @@
 \Title{Awards}
 % Format: \Award{year}{title}
 
+\Description{\MarginText{2017}\textbf{Best Paper Winner, PACT'17} \newline\vspace{-1.8em}}
+
 \Description{\MarginText{2017}\textbf{Best Paper Winner, CGO'17} \newline\vspace{-1.8em}}
 
 \Description{\MarginText{2014}\textbf{Institute of Engineering \&
     Technology Prize}
-  \newline\vspace{-.8em}
-
-  \noindent Annual prize for top engineering student at Aston University.%
+  \newline \noindent Annual prize for top engineering student at Aston University.%
 }
 
 \Description{\MarginText{2009}\textbf{Arkwright Scholarship, Rolls
     Royce Holdings plc}
-  \newline\vspace{-.8em}
-
-  \noindent Funded scholarship awarded to less than 250 students nationwide.%
+  \newline \noindent Funded scholarship awarded to less than 250 students nationwide.%
 }
 
-\Description{\MarginText{2009}\textbf{Engineering Education Scheme of
-    England}
-  \newline\vspace{-.8em}
-
-  \noindent R\&D for a (now patented) supermarket trolley mounted shopping aid.%
+\Description{\MarginText{2009}\textbf{Engineering Education Scheme of England}
+  \newline \noindent R\&D for a (now patented) supermarket trolley mounted shopping aid.%
 }
 
 \Description{\MarginText{2008}\textbf{AESSEAL Design Innovation Award}
-  \newline\vspace{-.8em}
-
-  \noindent Cash prize for first place in an industrial 3D CAD competition.%
+	\newline \noindent Cash prize for first place in an industrial 3D CAD competition.%
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%
-%% ACADEMIC ACTIVITIES %
-%%%%%%%%%%%%%%%%%%%%%%%%
-%\Title{Academic Activities}
-%
-%\Description{%
-%  \MarginText{\textbf{Invited Talks}}%
-%  SPLS 2017, %
-%  Codeplay Software 2016, %
-%  Ocado Technology 2016, %
-%  Amazon Development Center 2016.%
-%  \vspace{-.8em}}
-%
-%\Description{%
-%  \MarginText{\textbf{Posters}}%
-%  Google 2016, %
-%  ACACES 2016, %
-%  PLDI 2016, %
-%  HiPEAC 2016, %
-%  Google 2015, %
-%  PPar 2015.%
-%  \vspace{-.8em}}
-%
-%\Description{%
-%  \MarginText{\textbf{Peer reviews}}%
-%  ACM TACO 2016, %
-%  LCTES 2016, %
-%  CGO 2016.%
-%  \vspace{-.8em}}
-%
-%% \Description{\MarginText{\textbf{Volunteering}}%
-%%   ParCo 2015.%
-%%   \vspace{-.8em}}
-%
-%\vspace{.8em}
+%%%%%%%%%%%%%%%%%%%%%%%
+% ACADEMIC ACTIVITIES %
+%%%%%%%%%%%%%%%%%%%%%%%
+\Title{Academic Activities}
+
+\Description{%
+  \MarginText{\textbf{Invited Talks}}%
+  Facebook 2018, %
+  Google 2018 ($\times2$), %
+  SPLS 2017, %
+  Codeplay Software 2016, %
+  Ocado Technology 2016, %
+  Amazon Development Center 2016.%
+  \vspace{-.8em}}
+
+\Description{%
+  \MarginText{\textbf{Posters}}%
+  ISSTA 2018,
+  DeepLearn 2018,
+  ACACES 2018,
+  % PPar 2017, %
+  Google 2016, %
+  ACACES 2016, %
+  PLDI 2016, %
+  HiPEAC 2016, %
+  Google 2015, %
+  PPar 2015.%
+  \vspace{-.8em}}
+
+\Description{%
+  \MarginText{\textbf{Peer reviews}}%
+  CGO 2018, %
+  ACM TACO 2016, %
+  LCTES 2016, %
+  CGO 2016.%
+  \vspace{-.8em}}
+
+ \Description{\MarginText{\textbf{Conference org.}}%
+   CGO 2018 Web Chair, %
+   PACT 2018 HotCRP Chair, %
+   ParCo 2015 Student Volunteer.%
+   \vspace{-.8em}}
+
+\vspace{.8em}
 
 
 %%%%%%%%%%%%%%%%%%%%
 % Technical skills %
 %%%%%%%%%%%%%%%%%%%%
-\Title{Technical Skills}
+% \Title{Technical Skills}
 
-\Description{\MarginText{\textbf{Languages}}%
-  C / C++, Python, SQL, Bash, JavaScript, OpenCL, various LISP dialects.%
-  \vspace{-.8em}%
-}
-
-\Description{\MarginText{\textbf{Tools}}%
-  Git, GNU/Linux, \LaTeX, TensorFlow, Bazel.%
-  % GNU autotools, gdb
-  \vspace{-.8em}%
-}
-
-% \Description{\MarginText{\textbf{Competent}}%
-%   Java, Clojure LISP, Lua, MATLAB, CMake, PHP, VHDL, bazel, CMake, x86 assembly.%
+% \Description{\MarginText{\textbf{Languages}}%
+%   C / C++, Python, SQL, Bash, JavaScript, OpenCL, various LISP dialects.%
 %   \vspace{-.8em}%
 % }
+
+% \Description{\MarginText{\textbf{Tools}}%
+%   Git, GNU/Linux, \LaTeX, TensorFlow, Bazel.%
+%   % GNU autotools, gdb
+%   \vspace{-.8em}%
+% }
+
+
+%\Description{\MarginText{\textbf{}}%
+ % C/C++, Python, git, GNU/Linux, Bash, JavaScript, OpenCL, SQL, \LaTeX, TensorFlow.%
+%  \vspace{-.8em}%
+%}
+
 
 \end{cv}
 
