Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -2,8 +2,7 @@
 
 \begin{document}
 
-\title{%Low Cost and Effective
-	Compiler Fuzzing through Deep Learning}
+\title{Compiler Fuzzing through Deep Learning}
 \input{abstract}
 \maketitle
 
