--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -66,7 +66,7 @@ OpenCL is typically compiled online, which amplifies the significance of detecti
 \end{figure}
 
 \paragraph{Semantic Analysis Failures} %
-Compilers should produce meaningful diagnostics when inputs are invalid, yet we discovered dozens of compiler defects attributable to improper or missing error handling. Many generation and mutation based approaches to on compiler validation have focused solely on testing under \emph{valid inputs}. As such, this class of bugs may go undiscovered. We believe that our approach contributes a significant improvement to generating plausibly-erroneous code over prior random-enumeration approaches.
+Compilers should produce meaningful diagnostics when inputs are invalid, yet we discovered dozens of compiler defects attributable to improper or missing error handling. Many generation and mutation based approaches to compiler validation have focused solely on testing under \emph{valid inputs}. As such, this class of bugs may go undiscovered. We believe that our approach contributes a significant improvement to generating plausibly-erroneous code over prior random-enumeration approaches.
 
 The use of undeclared identifiers is a core error diagnostic which one would expect to be robust in a mature compiler. DeepSmith discovered cases in which the presence of undeclared identifiers causes the Testbeds $10\pm$ compiler to crash. For example, the undeclared identifier \texttt{c} in Figure~\ref{lst:oclgrind-uncorrected-typos} raises an assertion during semantic analysis of the AST when used as an array index.
 
@@ -300,7 +300,7 @@ Both testing systems found anomalous results of all types.
 % CLSmith generated 3800 silent build crashes. CLgen generated 1023 silent build crashes. Lets ignore these, since we can't be sure of the cause.
 % CLSmith triggered 2 distinct compiler assertions. DeepSmith triggered 31.
 % CLSmith triggered 0 distinct compiler ``unreachable'' errors. DeepSmith triggered 3.
-In 48 hours of testing, CLSmith discovered compile-time crashes (\bc) in 8 of the 20 testbeds, DeepSmith crashed all of them. DeepSmith triggered 31 distinct compiler assertions, CLSmith 2. Both of the assertions triggered by CLSmith were also triggered by CLgen. DeepSmith also triggered 3 distinct \emph{unreachable!} compile-time crashes, CLSmith triggered 0.
+In 48 hours of testing, CLSmith discovered compile-time crashes (\bc) in 8 of the 20 testbeds, DeepSmith crashed all of them. DeepSmith triggered 31 distinct compiler assertions, CLSmith 2. Both of the assertions triggered by CLSmith were also triggered by DeepSmith. DeepSmith also triggered 3 distinct \emph{unreachable!} compile-time crashes, CLSmith triggered 0.
 
 The Intel CPU Testbeds ($4\pm$, $5\pm$, $6\pm$, and $7\pm$) would occasionally emit a stack trace upon crashing, identifying the failure point in a specific compiler pass. CLSmith triggered such crashes in 4 distinct passes. DeepSmith triggered crashes in 10 distinct passes, including 3 of the 4 in which CLSmith did. Figure~\ref{lst:intel-passes} provides examples. Many of these crashes are optimization sensitive, and are more likely to occur when optimizations are enabled. CLSmith was able to induce a crash in only one of the Intel testbeds with optimizations disabled. DeepSmith crashed all of the compilers with both optimizations enabled and disabled.
 
@@ -417,9 +417,9 @@ The results emphasize that compiler validation is a moving target. Every change 
 
 A large portion of the DeepSmith architecture is language-agnostic, requiring only a corpus, encoder, and harness for each new language. This potentially significantly lowers the barrier-to-entry compared with prior grammar-based fuzzers. To explore this, we report on initial results in extending DeepSmith to the Solidity programming language.  Solidity is the smart contract programming language of the Ethereum blockchain. At less than four years old, it lacks much of the tooling of more established programming languages. Yet, it is an important candidate for rigorous testing, as exploitable bugs may undermine the integrity of the blockchain and lead to fraudulent transactions.
 
-\paragraph{Testing Methodology} We applied the same methodology to train the program generator as for OpenCL. We assembled a corpus of Solidity files on GitHub, recursively inlining imported modules where  possible. We used the same tokenizer as for OpenCL, only changing the list of language keywords and builtins. Code style was enforced using clang-format. We trained the model in the same manner as OpenCL. No modification was required to the either the language model or generator code. We created a simple compile-only test harness to drive the generated Solidity contracts.
+\paragraph{Testing Methodology} We applied the same methodology to train the program generator as for OpenCL. We assembled a corpus of Solidity contracts from GitHub, recursively inlining imported modules where  possible. We used the same tokenizer as for OpenCL, only changing the list of language keywords and builtins. Code style was enforced using clang-format. We trained the model in the same manner as OpenCL. No modification to either the language model or generator code was required. We created a simple compile-only test harness to drive the generated Solidity contracts.
 
-\paragraph{Initial Results} We ran the generator and harness loop for 12 hours on four testbeds: the Solidity reference compiler \texttt{solc} with optimizations on or off, and \texttt{solc-js}, which is an Emscripten compiled version of the \texttt{solc} compiler. Our results are summarized in Table~\ref{tab:solidity}. We found numerous cases where the compilers silently crashes, and two distinct compiler assertions. %
+\paragraph{Initial Results} We ran the generator and harness loop for 12 hours on four testbeds: the Solidity reference compiler \texttt{solc} with optimizations on or off, and \texttt{solc-js}, which is an Emscripten compiled version of the \texttt{solc} compiler. Our results are summarized in Table~\ref{tab:solidity}. We found numerous cases where the compiler silently crashes, and two distinct compiler assertions. %
 %
 The first is caused by missing error handling of language features (this issue is known to the developers).
 % Unimplemented feature: FixedPointType
