Update labm8 imports in experimental tree.

--- a/experimental/clgen/Search.ipynb
+++ b/experimental/clgen/Search.ipynb
@@ -27,8 +27,8 @@
     "import seaborn as sns\n",
     "\n",
     "from datetime import datetime\n",
-    "from labm8 import fs\n",
-    "from labm8 import viz\n",
+    "from lib.labm8 import fs\n",
+    "from lib.labm8 import viz\n",
     "\n",
     "import clgen\n",
     "from clgen import corpus\n",
