--- a/experimental/dsmith/lab/clgen-extensions/Adversarial Tuning.ipynb
+++ b/experimental/dsmith/lab/clgen-extensions/Adversarial Tuning.ipynb
@@ -113,7 +113,7 @@
    ],
    "source": [
     "import pickle\n",
-    "from labm8 import fs\n",
+    "from lib.labm8 import fs\n",
     "\n",
     "datadir = '../data/adversarial'\n",
     "fs.mkdir(datadir)\n",
