--- a/experimental/dsmith/lab/clgen-extensions/Parser.ipynb
+++ b/experimental/dsmith/lab/clgen-extensions/Parser.ipynb
@@ -120,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "# from labm8 import fs\n",
+    "# from lib.labm8 import fs\n",
     "\n",
     "# files = fs.ls(fs.path(\"~/data/github\"), abspaths=True)\n",
     "# n1 = len(files)\n",
@@ -235,7 +235,7 @@
    ],
    "source": [
     "from clgen import preprocess\n",
-    "from labm8 import fs\n",
+    "from lib.labm8 import fs\n",
     "\n",
     "# our test input:\n",
     "with open(fs.path(\"~/data/in/amd-app-sdk-3.0-DCT_Kernels.cl\")) as infile:\n",
@@ -424,7 +424,7 @@
     }
    ],
    "source": [
-    "from labm8 import fs\n",
+    "from lib.labm8 import fs\n",
     "from pycparser.c_parser import ParseError\n",
     "\n",
     "indir = \"~/data/minigh\"\n",
