--- a/experimental/dsmith/lab/clgen-extensions/Sampler Saturation.ipynb
+++ b/experimental/dsmith/lab/clgen-extensions/Sampler Saturation.ipynb
@@ -158,7 +158,7 @@
    "outputs": [],
    "source": [
     "sampler.cache(model).empty()\n",
-    "from labm8 import fs\n",
+    "from lib.labm8 import fs\n",
     "import time\n",
     "\n",
     "datadir = \"data/saturation\"\n",
