--- a/experimental/dsmith/notebooks/Bootstrap Crashes.ipynb
+++ b/experimental/dsmith/notebooks/Bootstrap Crashes.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "from labm8 import fs\n",
+    "from lib.labm8 import fs\n",
     "from io import StringIO\n",
     "\n",
     "from reproduce import reproduce\n",
