--- a/experimental/dsmith/notebooks/Bug Reports.ipynb
+++ b/experimental/dsmith/notebooks/Bug Reports.ipynb
@@ -20,7 +20,7 @@
     "import sqlalchemy as sql\n",
     "import cldrive\n",
     "import sys\n",
-    "from labm8 import crypto\n",
+    "from lib.labm8 import crypto\n",
     "\n",
     "import analyze\n",
     "import db\n",
@@ -162,7 +162,7 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "from labm8 import fs\n",
+    "from lib.labm8 import fs\n",
     "\n",
     "outbox = fs.path(\"outbox\", \"coCLgenResults\", \"segfaults\")\n",
     "fs.mkdir(outbox)\n",
