--- a/experimental/dsmith/notebooks/CLgen Sampling Rate.ipynb
+++ b/experimental/dsmith/notebooks/CLgen Sampling Rate.ipynb
@@ -26,8 +26,8 @@
    "source": [
     "import clgen\n",
     "\n",
-    "from labm8 import fs\n",
-    "from labm8 import jsonutil\n",
+    "from lib.labm8 import fs\n",
+    "from lib.labm8 import jsonutil\n",
     "\n",
     "sampler_metas = [path for path in fs.ls(fs.path(\"~/.cache/clgen\"), recursive=True, abspaths=True)\n",
     "                 if \"/sampler/\" in path and path.endswith(\"META\")]\n",
