--- a/experimental/dsmith/notebooks/Classifications.ipynb
+++ b/experimental/dsmith/notebooks/Classifications.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "from collections import OrderedDict\n",
-    "from labm8 import fs\n",
+    "from lib.labm8 import fs\n",
     "\n",
     "import analyze\n",
     "import db\n",
