--- a/experimental/clgen/Classification.ipynb
+++ b/experimental/clgen/Classification.ipynb
@@ -37,8 +37,8 @@
     "\n",
     "from collections import Counter\n",
     "\n",
-    "from labm8 import fs\n",
-    "from labm8 import viz\n",
+    "from lib.labm8 import fs\n",
+    "from lib.labm8 import viz\n",
     "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Input, Dropout, Embedding, merge, LSTM, Dense\n",
