--- a/experimental/clgen/Verify.ipynb
+++ b/experimental/clgen/Verify.ipynb
@@ -32,8 +32,8 @@
     "\n",
     "import json\n",
     "\n",
-    "from labm8 import fs\n",
-    "from labm8 import viz\n",
+    "from lib.labm8 import fs\n",
+    "from lib.labm8 import viz\n",
     "\n",
     "plt.style.use([\"seaborn-white\", \"seaborn-paper\"])"
    ]
