--- a/experimental/dsmith/lab/cldrive-extensions/Parse CLsmith with cldrive.ipynb
+++ b/experimental/dsmith/lab/cldrive-extensions/Parse CLsmith with cldrive.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from labm8 import fs\n",
+    "from lib.labm8 import fs\n",
     "import cldrive"
    ]
   },
