--- a/experimental/dsmith/notebooks/Difftest Results.ipynb
+++ b/experimental/dsmith/notebooks/Difftest Results.ipynb
@@ -38,7 +38,7 @@
     "from collections import OrderedDict\n",
     "from matplotlib.ticker import FuncFormatter\n",
     "from collections import OrderedDict\n",
-    "from labm8 import fs, viz\n",
+    "from lib.labm8 import fs, viz\n",
     "\n",
     "def cache_time(path):\n",
     "    modified = datetime.datetime.fromtimestamp(os.path.getmtime(path))\n",
