Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -11,13 +11,9 @@
 	Hugh~Leather\addressnum{1}
 }
 
-\address{1}{
-	University of Edinburgh, Scotland, UK
-}
+\address{1}{University of Edinburgh, Scotland, UK}
 
-\address{2}{
-	Codeplay Software, Edinburgh, Scotland, UK
-}
+\address{2}{Codeplay Software, Edinburgh, Scotland, UK}
 
 \extra{1}{E-mail: c.cummins@ed.ac.uk}
 
