Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -16,8 +16,7 @@
 \address{2}{Codeplay Software, Edinburgh, Scotland, UK}
 
 \extra{1}{E-mail: c.cummins@ed.ac.uk}
-\extra{2}{This work was supported by the UK EPSRC under grants EP/L01503X/1 (CDT in Pervasive Parallelism),
-EP/H044752/1 (ALEA), and EP/M015793/1 (DIVIDEND).}
+\extra{2}{This work was supported by the UK EPSRC under grants EP/L01503X/1 (CDT in Pervasive Parallelism), and EP/P003915/1 (SUMMER).}
 
 \pagestyle{empty}
 
