Add ACACES and ISSTA.

--- a/docs/cv/sec/awards.tex
+++ b/docs/cv/sec/awards.tex
@@ -5,6 +5,19 @@
 
 \Description{%
   % Date.
+  \MarginText{2018}%
+  % Award.
+  \textbf{Distinguished Paper Award Winner, ISSTA'18}\\
+  \emph{ACM SIGSOFT International Symposium on Software Testing and Analysis} %
+  \newline \noindent
+  % Description.
+  Top tier conference with 112 submissions, 28\% acceptance rate.
+  \newline\vspace{-1.8em}%
+}
+
+
+\Description{%
+  % Date.
   \MarginText{2017}%
   % Award.
   \textbf{Best Paper Winner, PACT'17}\\
