--- a/docs/cv/sec/publications.tex
+++ b/docs/cv/sec/publications.tex
@@ -11,10 +11,25 @@
   % Title.
   \textbf{Compiler Fuzzing through Deep Learning}. %
   % Conference / Journal.
-  ISSTA'18 (28\% acceptance rate), Amsterdam, Netherlands.\@  % 112 submissions, 31 accepted.
+  Distinguished Paper Award ISSTA'18 (28\% acceptance rate), Amsterdam, Netherlands.\@  % 112 submissions, 31 accepted.
   \newline\vspace{-1em}\\ \noindent
   % Description.
   Unsupervised machine learning to derive program generators for compiler fuzz testing. Implemented in $100\times$ less code than state-of-the-art program generator, and $3.03\times$ faster. Found and reported 67 bug reports in OpenCL compilers.%
+}
+
+
+\Description{%
+  % Publication date.
+  \MarginText{2018}%
+  % Authors.
+  C.\ \textsc{Cummins}, P.\ \textsc{Petoumenos}, A.\ \textsc{Murray}, H.\ \textsc{Leather}. %
+  % Title.
+  \textbf{DeepSmith: Compiler Fuzzing through Deep Learning} (extended abstract). %
+  % Conference / Journal.
+  ACACES'18, Fiuggi, Italy.\@ %
+  \newline\vspace{-1em}\\ \noindent
+  % Description.
+  A novel approach to compiler fuzzing which offers to dramatically reduce the cost and human effort required to engineer a random program generator.%
 }
 
 
