Import ISSTA paper.

--- a/thesis.tex
+++ b/thesis.tex
@@ -12,9 +12,9 @@
 \input{chap/intro}
 \input{chap/background}
 \input{chap/litreview}
-\input{asplos-2017/paper}
 \input{cgo-2017/paper}
 \input{pact-2017/paper}
+\input{issta-2018/paper}
 
 \input{chap/conclusions}
 \input{bibliography}
