Update ISSTA build file.

--- a/docs/2018_07_issta/sec/deepsmith.tex
+++ b/docs/2018_07_issta/sec/deepsmith.tex
@@ -105,7 +105,7 @@ We employ established Differential Testing methodologies to expose compiler defe
 	\footnotesize %
 	\centering %
 	% \rowcolors{2}{white}{gray!25}
-	\input{build/tab/platforms}
+	\input{tab/platforms}
 	\caption{%
 		OpenCL systems and the number of bug reports submitted to date. For each system, two testbeds are created, one with compiler optimizations, the other without.%
 		\vspace{-.5em}
