--- a/docs/2018_07_issta/sec/eval.tex
+++ b/docs/2018_07_issta/sec/eval.tex
@@ -236,7 +236,7 @@ In this section, we provide a quantitative comparison of the bug-finding capabil
 \begin{table*}
   \scriptsize %
   \centering %
-  \input{build/tab/megatable}
+  \input{tab/megatable}
   \caption{%
     % CLSmith total ``interesting'': 19415
     % DeepSmith total ``interesting'': 8272
@@ -249,7 +249,7 @@ In this section, we provide a quantitative comparison of the bug-finding capabil
 
 \begin{figure}
   \centering %
-  \includegraphics[width=\columnwidth]{build/img/vs-clsmith}%
+  \includegraphics[width=\columnwidth]{img/vs-clsmith}%
   \vspace{-1em}
   \caption{%
     Comparison of runtimes (a) and test case sizes (b). DeepSmith test cases are on average evaluated $3.03\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively), and are two orders of magnitude smaller. Timings do not include the cost of timeouts which would increase the performance gains of DeepSmith by nearly a factor of two.
