--- a/docs/2018_07_issta/paper.tex
+++ b/docs/2018_07_issta/paper.tex
@@ -2,23 +2,22 @@
 
 \begin{document}
 
-\title{Compiler Fuzzing through Deep Learning}
-\input{abstract}
-\maketitle
+  \title{Compiler Fuzzing through Deep Learning}
+  \input{abstract}
+  \maketitle
 
+  \lstset{language=[OpenCL]C}
 
-\lstset{language=[OpenCL]C}
+  \input{sec/intro}
+  \input{sec/deepsmith}
+  \input{sec/methodology}
+  \input{sec/eval}
+  \input{sec/related_work}
+  \input{sec/conclusion}
+  \input{acks}
 
-\input{sec/intro}
-\input{sec/deepsmith}
-\input{sec/methodology}
-\input{sec/eval}
-\input{sec/related_work}
-\input{sec/conclusion}
-
-% \input{sec/acks}  % double blind review
-\bibliographystyle{plain}
-\bibliography{refs}
-%\printbibliography
+  \bibliographystyle{plain}
+  \bibliography{refs}
 
 \end{document}
+
