--- a/docs/2018_07_issta/sec/related_work.tex
+++ b/docs/2018_07_issta/sec/related_work.tex
@@ -8,7 +8,7 @@ The random generation of test cases is a well established approach to the compil
 
 \begin{figure}
 	\centering %
-	\includegraphics[width=.85\columnwidth]{build/img/clang-crashes}%
+	\includegraphics[width=.85\columnwidth]{img/clang-crashes}%
 	\caption{%
 		Crash rate of the Clang front-end of every LLVM release in the past 24 months compiling 75k DeepSmith kernels.
 	}%
@@ -18,7 +18,7 @@ The random generation of test cases is a well established approach to the compil
 \begin{table}
 	\footnotesize %
 	\centering %
-	\input{build/tab/clang-assert-counts}
+	\input{tab/clang-assert-counts}
 	\caption{%
 		The number of DeepSmith programs which trigger distinct Clang front-end assertions, and the number of programs which trigger unreachables.%
 	}
