--- a/experimental/polyglot/baselines/notebooks/Models Eval.ipynb
+++ b/experimental/polyglot/baselines/notebooks/Models Eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "    return {\n",
     "        name.stem: corpuses.Corpus(pbutil.FromFile(directory / name, proto_class()))\n",
     "        for name in directory.iterdir()\n",
+    "        if not str(name.stem).startswith('c-')  # TODO\n",
     "    }\n",
     "\n",
     "clone_lists_dir = bazelutil.DataPath('phd/experimental/polyglot/baselines/corpuses')\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
